// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProteinFeatureViewer Should default to an invalid range if there is a problem with the response JSON. 1`] = `
<div
  className="protein-feature-viewer"
>
  <GridRow
    centered={true}
    stretched={false}
  >
    <GridColumn>
      <FeatureViewer
        data={Array []}
        getTextForHover={[Function]}
        height={200}
        showGrouped={true}
        title=""
        width={600}
      />
    </GridColumn>
    <GridColumn>
      <Form
        as="form"
        onSubmit={[Function]}
      >
        <FormInput
          as={[Function]}
          control={[Function]}
          fluid={false}
          onChange={[Function]}
          value="Q13485"
          width="three"
        />
        <FormButton
          as={[Function]}
          control={[Function]}
        >
          Submit Protein ID
        </FormButton>
        <FormCheckbox
          as={[Function]}
          control={[Function]}
          defaultChecked={true}
          label="Show grouped?"
          onChange={[Function]}
        />
      </Form>
    </GridColumn>
  </GridRow>
</div>
`;

exports[`ProteinFeatureViewer Should generate annotation text when a hover event is fired. 1`] = `"MH1: MH1 domain (18 - 142)<br /><a href=\\"http://pfam.xfam.org/family/PF03165\\">PFAM</a> <a href=\\"http://mutationaligner.org/domains/PF03165\\">Mutagen Aligner</a>"`;

exports[`ProteinFeatureViewer Should match the default snapshot. 1`] = `
<div
  className="protein-feature-viewer"
>
  <GridRow
    centered={true}
    stretched={false}
  >
    <GridColumn>
      <FeatureViewer
        data={Array []}
        getTextForHover={[Function]}
        height={200}
        showGrouped={true}
        title=""
        width={600}
      />
    </GridColumn>
    <GridColumn>
      <Form
        as="form"
        onSubmit={[Function]}
      >
        <FormInput
          as={[Function]}
          control={[Function]}
          fluid={false}
          onChange={[Function]}
          value="Q9NYJ7"
          width="three"
        />
        <FormButton
          as={[Function]}
          control={[Function]}
        >
          Submit Protein ID
        </FormButton>
        <FormCheckbox
          as={[Function]}
          control={[Function]}
          defaultChecked={true}
          label="Show grouped?"
          onChange={[Function]}
        />
      </Form>
    </GridColumn>
  </GridRow>
</div>
`;

exports[`ProteinFeatureViewer Should show protein information when successfully retrieved. 1`] = `
<div
  className="protein-feature-viewer"
>
  <GridRow
    centered={true}
    stretched={false}
  >
    <GridColumn>
      <FeatureViewer
        data={Array []}
        getTextForHover={[Function]}
        height={200}
        showGrouped={true}
        title=""
        width={600}
      />
    </GridColumn>
    <GridColumn>
      <Form
        as="form"
        onSubmit={[Function]}
      >
        <FormInput
          as={[Function]}
          control={[Function]}
          fluid={false}
          onChange={[Function]}
          value="Q9NYJ7"
          width="three"
        />
        <FormButton
          as={[Function]}
          control={[Function]}
        >
          Submit Protein ID
        </FormButton>
        <FormCheckbox
          as={[Function]}
          control={[Function]}
          defaultChecked={true}
          label="Show grouped?"
          onChange={[Function]}
        />
      </Form>
    </GridColumn>
  </GridRow>
</div>
`;
